# CBB

./: CMakeLists.txt  CinemasBestBenchmark.pro  MovieClass.h  MovieMaxHeap.h  MovieTree.h  README.md  credits.cpp  creditswindow.cpp  creditswindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_copy.ui
CinemasBestBenchmark/: MovieClass.h  MovieTree.h  credits.cpp  credits.h  credits.ui  creditswindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
